--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="content">
-    <img id="qrimage" src="/images/image-qr-code.png" alt="QR Code">
+    <img id="qrimage" src="images/image-qr-code.png" alt="QR Code">
     <p id="title">Improve your front-end skills by building projects</p>
     <p id="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
