--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
   <div class="content">
-    <img id="qrimage" src="images/image-qr-code.png" alt="QR Code">
-    <p id="title">Improve your front-end skills by building projects</p>
-    <p id="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <img class="qrimage" src="images/image-qr-code.png" alt="QR Code">
+    <h1 class="title">Improve your front-end skills by building projects</h1>
+    <h2 class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
