--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 
-  <div class="content">
+  <main class="main">
     <img class="qrimage" src="images/image-qr-code.png" alt="QR Code">
     <h1 class="title">Improve your front-end skills by building projects</h1>
-    <h2 class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
-  </div>
+    <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/LuanLessa">Luan Lessa</a>.
