--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <h1 class="title">Improve your front-end skills by building projects</h1>
     <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
-  <div class="attribution">
+  <footer>
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/LuanLessa">Luan Lessa</a>.
-  </div>
+    </div>
+  </footer>
+  
 </body>
 </html>
